Update index.html layout and add background image
Removed firstweb.html, added a table to index.html, and set a new background image using pic/images.png.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的网站</title>
+    <style>
+        body {
+            background:url("pic/images.png")
+        }
+    </style>
 </head>
 <body>
     <h1>Ethan</h1>
+    <table>
+        <tr>
+            <th>
+                序号
+            </th>
+        </tr>
+        <tr>
+            <td>
+                姓名
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
