--- a/index.html
+++ b/index.html
@@ -17,10 +17,24 @@
             <th>
                 序号
             </th>
+            <th>
+                姓名
+            </th>
         </tr>
         <tr>
             <td>
-                姓名
+                1
+            </td>
+            <td>
+                Luna
+            </td>
+        </tr>
+        <tr>
+            <td>
+                2
+            </td>
+            <td>
+                Cici
             </td>
         </tr>
     </table>
