--- a/index.html
+++ b/index.html
@@ -6,37 +6,16 @@
     <title>我的网站</title>
     <style>
         body {
-            background:url("pic/images.png")
+            background:url("pic/bg2.webp");
+            margin: 0;
+            min-height: 100vh;
+            background-size:cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
     </style>
 </head>
 <body>
-    <h1>Ethan</h1>
-    <table>
-        <tr>
-            <th>
-                序号
-            </th>
-            <th>
-                姓名
-            </th>
-        </tr>
-        <tr>
-            <td>
-                1
-            </td>
-            <td>
-                Luna
-            </td>
-        </tr>
-        <tr>
-            <td>
-                2
-            </td>
-            <td>
-                Cici
-            </td>
-        </tr>
-    </table>
+   
 </body>
 </html>
