--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <body>
 
   <header>
-    <h1>Hi, 我是小X 🎧</h1>
+    <h1>Hi, 我是Luna 🎧</h1>
     <p>一个热爱学习和探索的青少年</p>
   </header>
 
@@ -99,7 +99,7 @@
   <section id="about">
     <h2>关于我 👦</h2>
     <div class="card">
-      <p>我是一名中学生，喜欢科技、运动和音乐。平时爱捣鼓电脑和代码，也喜欢和朋友打篮球。</p>
+      <p>我是一名小学生，喜欢科技、运动和音乐。平时爱捣鼓电脑和代码，也喜欢和朋友打篮球。</p>
     </div>
   </section>
 
@@ -128,3 +128,4 @@
 
 </body>
 </html>
+
