CSS伪类、伪元素、盒子模型

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <h1>Ethan的学习笔记</h1>
   </div>
   <div class="nov">
-    <a href="">HTML</a>
-    <a href="">CSS</a>
-    <a href="">JavaScript</a>
-    <a href="">Vue</a>
-    <a href="">React</a>
+    <a href="https://www.bilibili.com/video/BV1kM4y127Li/" target="_blank">HTML</a>
+    <a href="https://www.bilibili.com/video/BV1kM4y127Li/?p=29" target="_blank">CSS</a>
+    <a href="https://www.bilibili.com/video/BV1Y84y1L7Nn" target="_blank">JavaScript</a>
+    <a href="" target="_blank">Vue</a>
+    <a href="" target="_blank">React</a>
   </div>
 </body>
 
