--- a/study/index.html
+++ b/study/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>学成在线</title>
+    <!-- 先清除，再设置 -->
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
-    
+    <div class="header">
+        <div class="wrapper">
+            <div class="logo">
+                <h1><a href="#">学成在线</a></h1>
+            </div>
+            <div class="nav">nav</div>
+            <div class="search">search</div>
+            <div class="user">user</div>
+        </div>
+    </div>
 </body>
+
 </html>
