--- a/study/index.html
+++ b/study/index.html
@@ -14,13 +14,22 @@
     <div class="header">
         <div class="wrapper">
             <div class="logo">
-                <h1><a href="#">学成在线</a></h1>
+                <h1><a href="index.html">学成在线</a></h1>
             </div>
-            <div class="nav">nav</div>
-            <div class="search">search</div>
-            <div class="user">user</div>
+            <div class="nav">
+                <ul>
+                    <li><a href="#" class="active">首页</a></li>
+                    <li><a href="#">课程</a></li>
+                    <li><a href="#">职业规划</a></li>
+                </ul>
+            </div>
+            <div class="search">
+                <input type="text" placeholder="请输入关键字"><a href="#"></a>
+            </div>
+            <div class="user"><a href=""><img src="uploads/user.png" alt=""><span>波仔学前端</span></a></div>
         </div>
     </div>
+
 </body>
 
 </html>
